--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <a href="../">../</a>
 <a href=".git/">.git/</a>
 <a href="README.md">README.md</a>
+<a href="edge/">edge/</a>
 <a href="listing.sh">listing.sh</a>
 <a href="v3.2/">v3.2/</a>
+<a href="v3.3/">v3.3/</a>
 </pre></body></html>
