--- a/v3.2/index.html
+++ b/v3.2/index.html
@@ -3,4 +3,5 @@
 <a href="libuv/">libuv/</a>
 <a href="nodejs-lts/">nodejs-lts/</a>
 <a href="pkgs/">pkgs/</a>
+<a href="tests/">tests/</a>
 </pre></body></html>
