--- a/v3.2/pkgs/x86_64/index.html
+++ b/v3.2/pkgs/x86_64/index.html
@@ -4,6 +4,9 @@
 <a href="libuv-1.8.0-r0.apk">libuv-1.8.0-r0.apk</a>
 <a href="libuv-dev-1.8.0-r0.apk">libuv-dev-1.8.0-r0.apk</a>
 <a href="nodejs-lts-4.3.1-r0.apk">nodejs-lts-4.3.1-r0.apk</a>
+<a href="nodejs-lts-4.3.2-r0.apk">nodejs-lts-4.3.2-r0.apk</a>
 <a href="nodejs-lts-dev-4.3.1-r0.apk">nodejs-lts-dev-4.3.1-r0.apk</a>
+<a href="nodejs-lts-dev-4.3.2-r0.apk">nodejs-lts-dev-4.3.2-r0.apk</a>
 <a href="nodejs-lts-doc-4.3.1-r0.apk">nodejs-lts-doc-4.3.1-r0.apk</a>
+<a href="nodejs-lts-doc-4.3.2-r0.apk">nodejs-lts-doc-4.3.2-r0.apk</a>
 </pre></body></html>
