--- a/edge/pkgs/x86_64/index.html
+++ b/edge/pkgs/x86_64/index.html
@@ -5,8 +5,11 @@
 <a href="libuv-dev-1.8.0-r0.apk">libuv-dev-1.8.0-r0.apk</a>
 <a href="nodejs-lts-4.3.1-r0.apk">nodejs-lts-4.3.1-r0.apk</a>
 <a href="nodejs-lts-4.3.2-r0.apk">nodejs-lts-4.3.2-r0.apk</a>
+<a href="nodejs-lts-4.4.0-r0.apk">nodejs-lts-4.4.0-r0.apk</a>
 <a href="nodejs-lts-dev-4.3.1-r0.apk">nodejs-lts-dev-4.3.1-r0.apk</a>
 <a href="nodejs-lts-dev-4.3.2-r0.apk">nodejs-lts-dev-4.3.2-r0.apk</a>
+<a href="nodejs-lts-dev-4.4.0-r0.apk">nodejs-lts-dev-4.4.0-r0.apk</a>
 <a href="nodejs-lts-doc-4.3.1-r0.apk">nodejs-lts-doc-4.3.1-r0.apk</a>
 <a href="nodejs-lts-doc-4.3.2-r0.apk">nodejs-lts-doc-4.3.2-r0.apk</a>
+<a href="nodejs-lts-doc-4.4.0-r0.apk">nodejs-lts-doc-4.4.0-r0.apk</a>
 </pre></body></html>
