--- a/v3.2/index.html
+++ b/v3.2/index.html
@@ -2,6 +2,7 @@
 <a href="../">../</a>
 <a href="libuv/">libuv/</a>
 <a href="nodejs-lts/">nodejs-lts/</a>
+<a href="openssl/">openssl/</a>
 <a href="pkgs/">pkgs/</a>
 <a href="tests/">tests/</a>
 </pre></body></html>
