--- a/v3.2/index.html
+++ b/v3.2/index.html
@@ -1,5 +1,6 @@
 <html><body><h1>Directory listing</h1><hr/><pre>
 <a href="../">../</a>
+<a href="Dockerfile">Dockerfile</a>
 <a href="libuv/">libuv/</a>
 <a href="nodejs-lts/">nodejs-lts/</a>
 <a href="openssl/">openssl/</a>
