--- a/v3.2/pkgs/x86_64/index.html
+++ b/v3.2/pkgs/x86_64/index.html
@@ -9,14 +9,17 @@
 <a href="nodejs-lts-4.3.2-r0.apk">nodejs-lts-4.3.2-r0.apk</a>
 <a href="nodejs-lts-4.4.0-r0.apk">nodejs-lts-4.4.0-r0.apk</a>
 <a href="nodejs-lts-4.4.0-r1.apk">nodejs-lts-4.4.0-r1.apk</a>
+<a href="nodejs-lts-4.4.0-r2.apk">nodejs-lts-4.4.0-r2.apk</a>
 <a href="nodejs-lts-dev-4.3.1-r0.apk">nodejs-lts-dev-4.3.1-r0.apk</a>
 <a href="nodejs-lts-dev-4.3.2-r0.apk">nodejs-lts-dev-4.3.2-r0.apk</a>
 <a href="nodejs-lts-dev-4.4.0-r0.apk">nodejs-lts-dev-4.4.0-r0.apk</a>
 <a href="nodejs-lts-dev-4.4.0-r1.apk">nodejs-lts-dev-4.4.0-r1.apk</a>
+<a href="nodejs-lts-dev-4.4.0-r2.apk">nodejs-lts-dev-4.4.0-r2.apk</a>
 <a href="nodejs-lts-doc-4.3.1-r0.apk">nodejs-lts-doc-4.3.1-r0.apk</a>
 <a href="nodejs-lts-doc-4.3.2-r0.apk">nodejs-lts-doc-4.3.2-r0.apk</a>
 <a href="nodejs-lts-doc-4.4.0-r0.apk">nodejs-lts-doc-4.4.0-r0.apk</a>
 <a href="nodejs-lts-doc-4.4.0-r1.apk">nodejs-lts-doc-4.4.0-r1.apk</a>
+<a href="nodejs-lts-doc-4.4.0-r2.apk">nodejs-lts-doc-4.4.0-r2.apk</a>
 <a href="openssl-1.0.2g-r3.apk">openssl-1.0.2g-r3.apk</a>
 <a href="openssl-dev-1.0.2g-r3.apk">openssl-dev-1.0.2g-r3.apk</a>
 <a href="openssl-doc-1.0.2g-r3.apk">openssl-doc-1.0.2g-r3.apk</a>
