--- a/edge/tests/crypto/index.html
+++ b/edge/tests/crypto/index.html
@@ -1,8 +1,6 @@
 <html><body><h1>Directory listing</h1><hr/><pre>
 <a href="../">../</a>
 <a href="Dockerfile">Dockerfile</a>
-<a href="libuv/">libuv/</a>
-<a href="nodejs-lts/">nodejs-lts/</a>
-<a href="pkgs/">pkgs/</a>
-<a href="tests/">tests/</a>
+<a href="secp521r1-key.pem">secp521r1-key.pem</a>
+<a href="test.js">test.js</a>
 </pre></body></html>
