--- a/edge/pkgs/armhf/index.html
+++ b/edge/pkgs/armhf/index.html
@@ -7,12 +7,15 @@
 <a href="nodejs-lts-4.4.0-r0.apk">nodejs-lts-4.4.0-r0.apk</a>
 <a href="nodejs-lts-4.4.1-r0.apk">nodejs-lts-4.4.1-r0.apk</a>
 <a href="nodejs-lts-4.4.2-r0.apk">nodejs-lts-4.4.2-r0.apk</a>
+<a href="nodejs-lts-4.4.3-r0.apk">nodejs-lts-4.4.3-r0.apk</a>
 <a href="nodejs-lts-dev-4.3.1-r0.apk">nodejs-lts-dev-4.3.1-r0.apk</a>
 <a href="nodejs-lts-dev-4.4.0-r0.apk">nodejs-lts-dev-4.4.0-r0.apk</a>
 <a href="nodejs-lts-dev-4.4.1-r0.apk">nodejs-lts-dev-4.4.1-r0.apk</a>
 <a href="nodejs-lts-dev-4.4.2-r0.apk">nodejs-lts-dev-4.4.2-r0.apk</a>
+<a href="nodejs-lts-dev-4.4.3-r0.apk">nodejs-lts-dev-4.4.3-r0.apk</a>
 <a href="nodejs-lts-doc-4.3.1-r0.apk">nodejs-lts-doc-4.3.1-r0.apk</a>
 <a href="nodejs-lts-doc-4.4.0-r0.apk">nodejs-lts-doc-4.4.0-r0.apk</a>
 <a href="nodejs-lts-doc-4.4.1-r0.apk">nodejs-lts-doc-4.4.1-r0.apk</a>
 <a href="nodejs-lts-doc-4.4.2-r0.apk">nodejs-lts-doc-4.4.2-r0.apk</a>
+<a href="nodejs-lts-doc-4.4.3-r0.apk">nodejs-lts-doc-4.4.3-r0.apk</a>
 </pre></body></html>
