--- a/index.html
+++ b/index.html
@@ -6,4 +6,5 @@
 <a href="README.md">README.md</a>
 <a href="v3.2/">v3.2/</a>
 <a href="v3.3/">v3.3/</a>
+<a href="v3.4/">v3.4/</a>
 </pre></body></html>
