--- a/v3.2/pkgs/x86_64/index.html
+++ b/v3.2/pkgs/x86_64/index.html
@@ -2,7 +2,9 @@
 <a href="../">../</a>
 <a href="APKINDEX.tar.gz">APKINDEX.tar.gz</a>
 <a href="libcrypto1.0-1.0.2g-r3.apk">libcrypto1.0-1.0.2g-r3.apk</a>
+<a href="libcrypto1.0-1.0.2h-r0.apk">libcrypto1.0-1.0.2h-r0.apk</a>
 <a href="libssl1.0-1.0.2g-r3.apk">libssl1.0-1.0.2g-r3.apk</a>
+<a href="libssl1.0-1.0.2h-r0.apk">libssl1.0-1.0.2h-r0.apk</a>
 <a href="libuv-1.8.0-r0.apk">libuv-1.8.0-r0.apk</a>
 <a href="libuv-dev-1.8.0-r0.apk">libuv-dev-1.8.0-r0.apk</a>
 <a href="nodejs-lts-4.3.1-r0.apk">nodejs-lts-4.3.1-r0.apk</a>
@@ -12,6 +14,9 @@
 <a href="nodejs-lts-4.4.0-r2.apk">nodejs-lts-4.4.0-r2.apk</a>
 <a href="nodejs-lts-4.4.1-r0.apk">nodejs-lts-4.4.1-r0.apk</a>
 <a href="nodejs-lts-4.4.2-r0.apk">nodejs-lts-4.4.2-r0.apk</a>
+<a href="nodejs-lts-4.4.3-r0.apk">nodejs-lts-4.4.3-r0.apk</a>
+<a href="nodejs-lts-4.4.4-r0.apk">nodejs-lts-4.4.4-r0.apk</a>
+<a href="nodejs-lts-4.4.5-r0.apk">nodejs-lts-4.4.5-r0.apk</a>
 <a href="nodejs-lts-dev-4.3.1-r0.apk">nodejs-lts-dev-4.3.1-r0.apk</a>
 <a href="nodejs-lts-dev-4.3.2-r0.apk">nodejs-lts-dev-4.3.2-r0.apk</a>
 <a href="nodejs-lts-dev-4.4.0-r0.apk">nodejs-lts-dev-4.4.0-r0.apk</a>
@@ -19,6 +24,9 @@
 <a href="nodejs-lts-dev-4.4.0-r2.apk">nodejs-lts-dev-4.4.0-r2.apk</a>
 <a href="nodejs-lts-dev-4.4.1-r0.apk">nodejs-lts-dev-4.4.1-r0.apk</a>
 <a href="nodejs-lts-dev-4.4.2-r0.apk">nodejs-lts-dev-4.4.2-r0.apk</a>
+<a href="nodejs-lts-dev-4.4.3-r0.apk">nodejs-lts-dev-4.4.3-r0.apk</a>
+<a href="nodejs-lts-dev-4.4.4-r0.apk">nodejs-lts-dev-4.4.4-r0.apk</a>
+<a href="nodejs-lts-dev-4.4.5-r0.apk">nodejs-lts-dev-4.4.5-r0.apk</a>
 <a href="nodejs-lts-doc-4.3.1-r0.apk">nodejs-lts-doc-4.3.1-r0.apk</a>
 <a href="nodejs-lts-doc-4.3.2-r0.apk">nodejs-lts-doc-4.3.2-r0.apk</a>
 <a href="nodejs-lts-doc-4.4.0-r0.apk">nodejs-lts-doc-4.4.0-r0.apk</a>
@@ -26,7 +34,13 @@
 <a href="nodejs-lts-doc-4.4.0-r2.apk">nodejs-lts-doc-4.4.0-r2.apk</a>
 <a href="nodejs-lts-doc-4.4.1-r0.apk">nodejs-lts-doc-4.4.1-r0.apk</a>
 <a href="nodejs-lts-doc-4.4.2-r0.apk">nodejs-lts-doc-4.4.2-r0.apk</a>
+<a href="nodejs-lts-doc-4.4.3-r0.apk">nodejs-lts-doc-4.4.3-r0.apk</a>
+<a href="nodejs-lts-doc-4.4.4-r0.apk">nodejs-lts-doc-4.4.4-r0.apk</a>
+<a href="nodejs-lts-doc-4.4.5-r0.apk">nodejs-lts-doc-4.4.5-r0.apk</a>
 <a href="openssl-1.0.2g-r3.apk">openssl-1.0.2g-r3.apk</a>
+<a href="openssl-1.0.2h-r0.apk">openssl-1.0.2h-r0.apk</a>
 <a href="openssl-dev-1.0.2g-r3.apk">openssl-dev-1.0.2g-r3.apk</a>
+<a href="openssl-dev-1.0.2h-r0.apk">openssl-dev-1.0.2h-r0.apk</a>
 <a href="openssl-doc-1.0.2g-r3.apk">openssl-doc-1.0.2g-r3.apk</a>
+<a href="openssl-doc-1.0.2h-r0.apk">openssl-doc-1.0.2h-r0.apk</a>
 </pre></body></html>
