--- a/edge/pkgs/x86_64/index.html
+++ b/edge/pkgs/x86_64/index.html
@@ -2,7 +2,9 @@
 <a href="../">../</a>
 <a href="APKINDEX.tar.gz">APKINDEX.tar.gz</a>
 <a href="libuv-1.8.0-r0.apk">libuv-1.8.0-r0.apk</a>
+<a href="libuv-1.9.1-r0.apk">libuv-1.9.1-r0.apk</a>
 <a href="libuv-dev-1.8.0-r0.apk">libuv-dev-1.8.0-r0.apk</a>
+<a href="libuv-dev-1.9.1-r0.apk">libuv-dev-1.9.1-r0.apk</a>
 <a href="nodejs-lts-4.3.1-r0.apk">nodejs-lts-4.3.1-r0.apk</a>
 <a href="nodejs-lts-4.3.2-r0.apk">nodejs-lts-4.3.2-r0.apk</a>
 <a href="nodejs-lts-4.4.0-r0.apk">nodejs-lts-4.4.0-r0.apk</a>
@@ -11,6 +13,13 @@
 <a href="nodejs-lts-4.4.3-r0.apk">nodejs-lts-4.4.3-r0.apk</a>
 <a href="nodejs-lts-4.4.4-r0.apk">nodejs-lts-4.4.4-r0.apk</a>
 <a href="nodejs-lts-4.4.5-r0.apk">nodejs-lts-4.4.5-r0.apk</a>
+<a href="nodejs-lts-4.4.6-r0.apk">nodejs-lts-4.4.6-r0.apk</a>
+<a href="nodejs-lts-4.4.7-r0.apk">nodejs-lts-4.4.7-r0.apk</a>
+<a href="nodejs-lts-4.5.0-r0.apk">nodejs-lts-4.5.0-r0.apk</a>
+<a href="nodejs-lts-4.6.0-r0.apk">nodejs-lts-4.6.0-r0.apk</a>
+<a href="nodejs-lts-4.6.1-r0.apk">nodejs-lts-4.6.1-r0.apk</a>
+<a href="nodejs-lts-6.9.1-r0.apk">nodejs-lts-6.9.1-r0.apk</a>
+<a href="nodejs-lts-6.9.2-r0.apk">nodejs-lts-6.9.2-r0.apk</a>
 <a href="nodejs-lts-dev-4.3.1-r0.apk">nodejs-lts-dev-4.3.1-r0.apk</a>
 <a href="nodejs-lts-dev-4.3.2-r0.apk">nodejs-lts-dev-4.3.2-r0.apk</a>
 <a href="nodejs-lts-dev-4.4.0-r0.apk">nodejs-lts-dev-4.4.0-r0.apk</a>
@@ -19,6 +28,13 @@
 <a href="nodejs-lts-dev-4.4.3-r0.apk">nodejs-lts-dev-4.4.3-r0.apk</a>
 <a href="nodejs-lts-dev-4.4.4-r0.apk">nodejs-lts-dev-4.4.4-r0.apk</a>
 <a href="nodejs-lts-dev-4.4.5-r0.apk">nodejs-lts-dev-4.4.5-r0.apk</a>
+<a href="nodejs-lts-dev-4.4.6-r0.apk">nodejs-lts-dev-4.4.6-r0.apk</a>
+<a href="nodejs-lts-dev-4.4.7-r0.apk">nodejs-lts-dev-4.4.7-r0.apk</a>
+<a href="nodejs-lts-dev-4.5.0-r0.apk">nodejs-lts-dev-4.5.0-r0.apk</a>
+<a href="nodejs-lts-dev-4.6.0-r0.apk">nodejs-lts-dev-4.6.0-r0.apk</a>
+<a href="nodejs-lts-dev-4.6.1-r0.apk">nodejs-lts-dev-4.6.1-r0.apk</a>
+<a href="nodejs-lts-dev-6.9.1-r0.apk">nodejs-lts-dev-6.9.1-r0.apk</a>
+<a href="nodejs-lts-dev-6.9.2-r0.apk">nodejs-lts-dev-6.9.2-r0.apk</a>
 <a href="nodejs-lts-doc-4.3.1-r0.apk">nodejs-lts-doc-4.3.1-r0.apk</a>
 <a href="nodejs-lts-doc-4.3.2-r0.apk">nodejs-lts-doc-4.3.2-r0.apk</a>
 <a href="nodejs-lts-doc-4.4.0-r0.apk">nodejs-lts-doc-4.4.0-r0.apk</a>
@@ -27,4 +43,11 @@
 <a href="nodejs-lts-doc-4.4.3-r0.apk">nodejs-lts-doc-4.4.3-r0.apk</a>
 <a href="nodejs-lts-doc-4.4.4-r0.apk">nodejs-lts-doc-4.4.4-r0.apk</a>
 <a href="nodejs-lts-doc-4.4.5-r0.apk">nodejs-lts-doc-4.4.5-r0.apk</a>
+<a href="nodejs-lts-doc-4.4.6-r0.apk">nodejs-lts-doc-4.4.6-r0.apk</a>
+<a href="nodejs-lts-doc-4.4.7-r0.apk">nodejs-lts-doc-4.4.7-r0.apk</a>
+<a href="nodejs-lts-doc-4.5.0-r0.apk">nodejs-lts-doc-4.5.0-r0.apk</a>
+<a href="nodejs-lts-doc-4.6.0-r0.apk">nodejs-lts-doc-4.6.0-r0.apk</a>
+<a href="nodejs-lts-doc-4.6.1-r0.apk">nodejs-lts-doc-4.6.1-r0.apk</a>
+<a href="nodejs-lts-doc-6.9.1-r0.apk">nodejs-lts-doc-6.9.1-r0.apk</a>
+<a href="nodejs-lts-doc-6.9.2-r0.apk">nodejs-lts-doc-6.9.2-r0.apk</a>
 </pre></body></html>
