--- a/v3.4/pkgs/x86_64/index.html
+++ b/v3.4/pkgs/x86_64/index.html
@@ -6,7 +6,9 @@
 <a href="libssl1.0-1.0.2g-r3.apk">libssl1.0-1.0.2g-r3.apk</a>
 <a href="libssl1.0-1.0.2h-r0.apk">libssl1.0-1.0.2h-r0.apk</a>
 <a href="libuv-1.8.0-r0.apk">libuv-1.8.0-r0.apk</a>
+<a href="libuv-1.9.1-r0.apk">libuv-1.9.1-r0.apk</a>
 <a href="libuv-dev-1.8.0-r0.apk">libuv-dev-1.8.0-r0.apk</a>
+<a href="libuv-dev-1.9.1-r0.apk">libuv-dev-1.9.1-r0.apk</a>
 <a href="nodejs-lts-4.3.1-r0.apk">nodejs-lts-4.3.1-r0.apk</a>
 <a href="nodejs-lts-4.3.2-r0.apk">nodejs-lts-4.3.2-r0.apk</a>
 <a href="nodejs-lts-4.4.0-r0.apk">nodejs-lts-4.4.0-r0.apk</a>
@@ -16,6 +18,13 @@
 <a href="nodejs-lts-4.4.3-r0.apk">nodejs-lts-4.4.3-r0.apk</a>
 <a href="nodejs-lts-4.4.4-r0.apk">nodejs-lts-4.4.4-r0.apk</a>
 <a href="nodejs-lts-4.4.5-r0.apk">nodejs-lts-4.4.5-r0.apk</a>
+<a href="nodejs-lts-4.4.6-r0.apk">nodejs-lts-4.4.6-r0.apk</a>
+<a href="nodejs-lts-4.4.7-r0.apk">nodejs-lts-4.4.7-r0.apk</a>
+<a href="nodejs-lts-4.5.0-r0.apk">nodejs-lts-4.5.0-r0.apk</a>
+<a href="nodejs-lts-4.6.0-r0.apk">nodejs-lts-4.6.0-r0.apk</a>
+<a href="nodejs-lts-4.6.1-r0.apk">nodejs-lts-4.6.1-r0.apk</a>
+<a href="nodejs-lts-6.9.1-r0.apk">nodejs-lts-6.9.1-r0.apk</a>
+<a href="nodejs-lts-6.9.2-r0.apk">nodejs-lts-6.9.2-r0.apk</a>
 <a href="nodejs-lts-dev-4.3.1-r0.apk">nodejs-lts-dev-4.3.1-r0.apk</a>
 <a href="nodejs-lts-dev-4.3.2-r0.apk">nodejs-lts-dev-4.3.2-r0.apk</a>
 <a href="nodejs-lts-dev-4.4.0-r0.apk">nodejs-lts-dev-4.4.0-r0.apk</a>
@@ -25,6 +34,13 @@
 <a href="nodejs-lts-dev-4.4.3-r0.apk">nodejs-lts-dev-4.4.3-r0.apk</a>
 <a href="nodejs-lts-dev-4.4.4-r0.apk">nodejs-lts-dev-4.4.4-r0.apk</a>
 <a href="nodejs-lts-dev-4.4.5-r0.apk">nodejs-lts-dev-4.4.5-r0.apk</a>
+<a href="nodejs-lts-dev-4.4.6-r0.apk">nodejs-lts-dev-4.4.6-r0.apk</a>
+<a href="nodejs-lts-dev-4.4.7-r0.apk">nodejs-lts-dev-4.4.7-r0.apk</a>
+<a href="nodejs-lts-dev-4.5.0-r0.apk">nodejs-lts-dev-4.5.0-r0.apk</a>
+<a href="nodejs-lts-dev-4.6.0-r0.apk">nodejs-lts-dev-4.6.0-r0.apk</a>
+<a href="nodejs-lts-dev-4.6.1-r0.apk">nodejs-lts-dev-4.6.1-r0.apk</a>
+<a href="nodejs-lts-dev-6.9.1-r0.apk">nodejs-lts-dev-6.9.1-r0.apk</a>
+<a href="nodejs-lts-dev-6.9.2-r0.apk">nodejs-lts-dev-6.9.2-r0.apk</a>
 <a href="nodejs-lts-doc-4.3.1-r0.apk">nodejs-lts-doc-4.3.1-r0.apk</a>
 <a href="nodejs-lts-doc-4.3.2-r0.apk">nodejs-lts-doc-4.3.2-r0.apk</a>
 <a href="nodejs-lts-doc-4.4.0-r0.apk">nodejs-lts-doc-4.4.0-r0.apk</a>
@@ -34,6 +50,13 @@
 <a href="nodejs-lts-doc-4.4.3-r0.apk">nodejs-lts-doc-4.4.3-r0.apk</a>
 <a href="nodejs-lts-doc-4.4.4-r0.apk">nodejs-lts-doc-4.4.4-r0.apk</a>
 <a href="nodejs-lts-doc-4.4.5-r0.apk">nodejs-lts-doc-4.4.5-r0.apk</a>
+<a href="nodejs-lts-doc-4.4.6-r0.apk">nodejs-lts-doc-4.4.6-r0.apk</a>
+<a href="nodejs-lts-doc-4.4.7-r0.apk">nodejs-lts-doc-4.4.7-r0.apk</a>
+<a href="nodejs-lts-doc-4.5.0-r0.apk">nodejs-lts-doc-4.5.0-r0.apk</a>
+<a href="nodejs-lts-doc-4.6.0-r0.apk">nodejs-lts-doc-4.6.0-r0.apk</a>
+<a href="nodejs-lts-doc-4.6.1-r0.apk">nodejs-lts-doc-4.6.1-r0.apk</a>
+<a href="nodejs-lts-doc-6.9.1-r0.apk">nodejs-lts-doc-6.9.1-r0.apk</a>
+<a href="nodejs-lts-doc-6.9.2-r0.apk">nodejs-lts-doc-6.9.2-r0.apk</a>
 <a href="openssl-1.0.2g-r3.apk">openssl-1.0.2g-r3.apk</a>
 <a href="openssl-1.0.2h-r0.apk">openssl-1.0.2h-r0.apk</a>
 <a href="openssl-dev-1.0.2g-r3.apk">openssl-dev-1.0.2g-r3.apk</a>
